--- a/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
@@ -34,7 +34,7 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <?php endforeach; ?>
 </ul>
 <script type="text/javascript">
-    jQuery('.item').on("click", function () {
+    jQuery('.categories-grid .item').on("click", function () {
         location.href = jQuery(this).find('a').attr('href');
     });
 </script>
