--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -165,7 +165,7 @@ $_helper = $this->helper('catalog/output');
                 <?php endforeach ?>
             </ul>
             <script>
-                jQuery('.item').not('.action').on("click", function () {
+                jQuery('.products-grid .item').not('.action').on("click", function () {
                     location.href = jQuery(this).find('a').attr('href');
                 });
             </script>
