add ajax sidecart _6

--- a/app/design/frontend/foundation/default/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/sidebar.phtml
@@ -56,8 +56,8 @@
                     type: 'post',
                     data: data,
                     success: function (data) {
-                        //jQuery('.please-wait').hide();
-                        console.log(data);
+                        jQuery('.please-wait').hide();
+                        //console.log(data);
                         if (jQuery('.off-canvas_cart')) {
                             jQuery('.off-canvas_cart').replaceWith(data.sidecart);
                         }
@@ -182,8 +182,8 @@
                 type: 'post',
                 data: data,
                 success: function (data) {
-                    //jQuery('.please-wait').hide();
-                    console.log(data);
+                    jQuery('.please-wait').hide();
+                    //console.log(data);
                     if (jQuery('.off-canvas_cart')) {
                         jQuery('.off-canvas_cart').replaceWith(data.sidecart);
                     }
