--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -31,9 +31,9 @@
 <header id="top">
     <div class="header-top">
         <div class="brand">
-            <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
+            <a href="<?php echo $this->getUrl('') ?>" class="logo">
                 <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
-                     alt="<?php echo $this->getLogoAlt() ?>" title="<?php echo $this->getLogoAlt() ?>" width="300" height="58"/>
+                     alt="<?php echo $this->getLogoAlt() ?>" width="300" height="58"/>
             </a>
         </div>
         <div class="trusted">
@@ -43,7 +43,7 @@
                     <a href="https://www.trustedshops.eu/buyerrating/info_X6B5E9287FD5871CE74DA1B1775EB2D64.html"
                        target="_blank" rel="nofollow noopener noreferrer">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/trusted-shops.png'); ?>"
-                             alt="Trusted Shops Logo" title="Trusted Shops Logo" width="40" height="40"/>
+                             alt="Trusted Shops Logo" width="40" height="40"/>
                     </a>
                 </li>
                 <li class="ts-trusted">bis 20.000 € <span>Käuferschutz</span></li>
