--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -12,15 +12,13 @@
                 <img class="lazy"
                      src="<?php echo $this->getSkinUrl('dist/assets/img/CoBi_TopShopProfessional2023_Logo_Hor_Gastronomiebedarf.png'); ?>"
                      alt="ComputerBild TopShop 2023 Gastronomiebedarf"
-                     title="ComputerBild TopShop 2023 Gastronomiebedarf"
                      width="192"
                      height="64"
                 />
             </a>
             <img class="footer-logo lazy"
                  src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
-                 alt="Gastrodax"
-                 title="Gastrodax"
+                 alt="Gastrodax Logo"
                  width="240"
                  height="46"
             />
@@ -28,7 +26,6 @@
                 <img class="lazy"
                      src="<?php echo $this->getSkinUrl('dist/assets/img/33_years_ng.png') ?>"
                      alt="33 Jahre New Gastroline GmbH"
-                     title="33 Jahre New Gastroline GmbH"
                      width="80"
                      height="34"
                 />
@@ -206,42 +203,42 @@
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#paypal')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
-                             alt="PayPal Logo" title="PayPal Logo" width="100" height="75"/> </a>
+                             alt="PayPal Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#klarna')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/klarna-white.png') ?>"
-                             alt="Klarna Logo" title="Klarna Logo" width="100" height="75"/> </a>
+                             alt="Klarna Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sofort')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sofort-white.png') ?>"
-                             alt="Sofortüberweisung Logo" title="Sofortüberweisung Logo" width="100" height="75"/> </a>
+                             alt="Sofortüberweisung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#moneyorder')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
-                             alt="Vorkasse Logo" title="Vorkasse Logo" width="100" height="75"/> </a>
+                             alt="Vorkasse Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#creditcard')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
-                             alt="Kreditkarte Logo" title="Kreditkarte Logo" width="100" height="75"/> </a>
+                             alt="Kreditkarte Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#invoice')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
-                             alt="Rechnung Logo" title="Rechnung Logo" width="100" height="75"/> </a>
+                             alt="Rechnung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#finanz')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
-                             alt="Finanzierung Logo" title="Finanzierung Logo" width="100" height="75"/> </a>
+                             alt="Finanzierung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sepa')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
-                             alt="Sepa Lastschrift Logo" title="Sepa Lastschrift Logo" width="100" height="75"/> </a>
+                             alt="Sepa Lastschrift Logo" width="100" height="75"/> </a>
                 </li>
             </ul>
         </div>
@@ -284,28 +281,27 @@
         <div class="social">
             <ul>
                 <li>
-                    <a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Facebook') ?>">
+                    <a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer">
                         <i class="fa-brands fa-square-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
-                       rel="nofollow noopener noreferrer" title="<?php echo $this->__('YouTube') ?>">
+                    <a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank" rel="nofollow noopener noreferrer">
                         <i class="fa-brands fa-square-youtube"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Twitter') ?>">
+                    <a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer">
                         <i class="fa-brands fa-square-x-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Instagram') ?>">
+                    <a href="https://www.instagram.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer">
                         <i class="fa-brands fa-square-instagram"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="whatsapp" href="https://wa.me/4915259105050" target="_blank" rel="nofollow noopener noreferrer" aria-label="Chat on WhatsApp" mtitle="<?php echo $this->__('Chat on WhatsApp') ?>">
+                    <a class="whatsapp" href="https://wa.me/4915259105050" target="_blank" rel="nofollow noopener noreferrer" aria-label="Chat on WhatsApp">
                         <i class="fa-brands fa-square-whatsapp"></i>
                     </a>
                 </li>
