--- a/app/design/frontend/foundation/default/template/page/contacts.phtml
+++ b/app/design/frontend/foundation/default/template/page/contacts.phtml
@@ -28,7 +28,7 @@
                 <?php echo $this->getChildHtml('footer') ?>
             </div>
             <div class="off-canvas position-right" id="offCanvasRightCart" data-off-canvas data-transition="overlap">
-                <?php echo $this->getChildHtml('cart_sidebar') ?>
+                <?php echo $this->getChildHtml('cart.sidebar') ?>
             </div>
         </div>
     </div>
