--- a/app/design/frontend/foundation/default/template/bundle/catalog/product/view/price.phtml
+++ b/app/design/frontend/foundation/default/template/bundle/catalog/product/view/price.phtml
@@ -38,35 +38,37 @@ $_taxHelper = $this->helper('tax');
 <?php
 if ($_product->getPriceType() == 1) {
     $_weeeTaxAmount = Mage::helper('weee')->getAmount($_product);
-    if (Mage::helper('weee')->typeOfDisplay($_product, array(1,2,4))) {
+    if (Mage::helper('weee')->typeOfDisplay($_product, array(1, 2, 4))) {
         $_weeeTaxAttributes = Mage::helper('weee')->getProductWeeeAttributesForRenderer($_product, null, null, null, true);
     }
 }
 $isMAPTypeOnGesture = Mage::helper('catalog')->isShowPriceOnGesture($_product);
-$canApplyMAP  = Mage::helper('catalog')->canApplyMsrp($_product);
+$canApplyMAP = Mage::helper('catalog')->canApplyMsrp($_product);
 $_store_id = Mage::app()->getStore()->getId();
 ?>
-<?php if ($_product->getCanShowPrice() !== false):?>
-<div class="price-box">
-    <p class="price-as-configured">
-        <span class="price-label"><?php echo $this->helper('bundle')->__('Price as configured') ?>:</span>
-        <?php if (!$this->getWithoutPrice()): ?>
-        <span<?php if (!$isMAPTypeOnGesture && $canApplyMAP): ?> style="display:none"<?php endif ?> class="full-product-price">
+<?php if ($_product->getCanShowPrice() !== false): ?>
+    <div class="price-box">
+        <p class="price-as-configured">
+            <span class="price-label"><?php echo $this->helper('bundle')->__('Price as configured') ?>:</span>
+            <?php if (!$this->getWithoutPrice()): ?>
+                <span<?php if (!$isMAPTypeOnGesture && $canApplyMAP): ?> style="display:none"<?php endif ?> class="full-product-price">
         <?php if ($this->helper('tax')->displayBothPrices()): ?>
-        <span class="price-tax">
+            <span class="price-tax">
             <span class="price-excluding-tax">
                 <span class="label"><?php echo Mage::helper('tax')->__('Excl. Tax:') ?></span>
-                <span class="price" id="price-excluding-tax-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
+                <span class="price"
+                      id="price-excluding-tax-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
                 <?php if (!$canApplyMAP): ?>
-                    <?php echo Mage::helper('core')->currency($_finalPrice,true,false) ?>
+                    <?php echo Mage::helper('core')->currency($_finalPrice, true, false) ?>
                 <?php endif ?>
                 </span>
             </span>
             <?php if ($_weeeTaxAmount && $_product->getPriceType() == 1 && Mage::helper('weee')->typeOfDisplay($_product, array(2, 1, 4))): ?>
                 <span class="weee">(<small>
-                    <?php $_weeeSeparator = ''; foreach ($_weeeTaxAttributes as $_weeeTaxAttribute): ?>
+                    <?php $_weeeSeparator = '';
+                    foreach ($_weeeTaxAttributes as $_weeeTaxAttribute): ?>
                         <?php if (Mage::helper('weee')->typeOfDisplay($_product, array(2, 4))): ?>
-                            <?php $amount = $_weeeTaxAttribute->getAmount()+$_weeeTaxAttribute->getTaxAmount(); ?>
+                            <?php $amount = $_weeeTaxAttribute->getAmount() + $_weeeTaxAttribute->getTaxAmount(); ?>
                         <?php else: ?>
                             <?php $amount = $_weeeTaxAttribute->getAmount(); ?>
                         <?php endif; ?>
@@ -79,24 +81,26 @@ $_store_id = Mage::app()->getStore()->getId();
             <?php endif; ?>
             <span class="price-including-tax">
                 <span class="label"><?php echo Mage::helper('tax')->__('Incl. Tax:') ?></span>
-                <span class="price" id="price-including-tax-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
+                <span class="price"
+                      id="price-including-tax-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
                 <?php if (!$canApplyMAP): ?>
-                    <?php echo Mage::helper('core')->currency($_finalPriceInclTax,true,false) ?>
+                    <?php echo Mage::helper('core')->currency($_finalPriceInclTax, true, false) ?>
                 <?php endif ?>
                 </span>
             </span>
         </span>
         <?php else: ?>
-        <span class="price" id="product-price-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
+            <span class="price" id="product-price-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>">
             <?php if (!$canApplyMAP): ?>
-                <?php echo Mage::helper('core')->currency($_finalPrice,true,false) ?>
+                <?php echo Mage::helper('core')->currency($_finalPrice, true, false) ?>
             <?php endif ?>
         </span>
         <?php if ($_weeeTaxAmount && $_product->getPriceType() == 1 && Mage::helper('weee')->typeOfDisplay($_product, array(2, 1, 4))): ?>
-            <span class="weee">(<small>
-                <?php $_weeeSeparator = ''; foreach ($_weeeTaxAttributes as $_weeeTaxAttribute): ?>
+                <span class="weee">(<small>
+                <?php $_weeeSeparator = '';
+                foreach ($_weeeTaxAttributes as $_weeeTaxAttribute): ?>
                     <?php if ($this->helper('tax')->displayPriceIncludingTax()): ?>
-                        <?php $amount = $_weeeTaxAttribute->getAmount()+$_weeeTaxAttribute->getTaxAmount(); ?>
+                        <?php $amount = $_weeeTaxAttribute->getAmount() + $_weeeTaxAttribute->getTaxAmount(); ?>
                     <?php else: ?>
                         <?php $amount = $_weeeTaxAttribute->getAmount(); ?>
                     <?php endif; ?>
@@ -106,43 +110,34 @@ $_store_id = Mage::app()->getStore()->getId();
                     <?php $_weeeSeparator = ' + '; ?>
                 <?php endforeach; ?>
             </small>)</span>
-        <?php endif; ?>
+            <?php endif; ?>
             <?php
-            $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null, $_store);
+            $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null);
             $taxclassid = $_product->getData('tax_class_id');
             $percent = Mage::getSingleton('tax/calculation')->getRate($request->setProductClassId($taxclassid));
             ?>
     <p class="mwst-price">
         <span class="price-label"></span>
-        <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
-                            <?php $_store_id = Mage::app()->getStore()->getId(); ?>
-                            <?php if ($_store_id == '5'): /* B2C */ ?>
-                                <?php if ($_finalPrice == $_price): ?>
-                                    <?php //echo $_coreHelper->formatPrice($_price / ($percent / 100 + 1), true) ?>
-                                <?php else: ?>
-                                    <?php //echo $_coreHelper->formatPrice($_finalPrice / ($percent / 100 + 1), true) ?>
-                                <?php endif; ?>
-                                <?php echo 'inkl. ' . $percent . '% MwSt.' ?>
-                            <?php elseif ($_store_id == '4'): /* B2B */ ?>
-                                <?php if ($_finalPrice == $_price): ?>
-                                    <?php echo '(' . $_coreHelper->formatPrice($_price * ($percent / 100 + 1), true) ?>
-                                <?php else: ?>
-                                    <?php echo '(' . $_coreHelper->formatPrice($_finalPrice * ($percent / 100 + 1), true) ?>
-                                <?php endif; ?>
-                                <?php echo '<br>inkl. ' . $percent . '% MwSt.)' ?>
-                            <?php endif; ?>
-                        </span>
-    </p>
+        <span class="price_mwst" id="price-including-tax-<?php echo $this->getIdSuffix() ?>">
+    <?php $_store_id = Mage::app()->getStore()->getId(); ?>
+    <?php if ($_store_id == '5'): /* B2C */ ?>
+        <?php echo 'inkl. ' . $percent . '% MwSt.' ?>
+    <?php elseif ($_store_id == '4'): /* B2B */ ?>
+        <?php echo '(' . $_coreHelper->formatPrice($_finalPrice * ($percent / 100 + 1), true) ?>
+        <?php echo '<br>inkl. ' . $percent . '% MwSt.)' ?>
     <?php endif; ?>
-    </span>
-    <?php endif ?>
+        </span>
     </p>
-</div>
+        <?php endif; ?>
+    </span>
+            <?php endif ?>
+        </p>
+    </div>
 <?php endif; ?>
-<?php if($_product->isSaleable()): ?>
-<script type="text/javascript">
-document.observe("dom:loaded", function() {
-    bundle.reloadPrice();
-});
-</script>
+<?php if ($_product->isSaleable()): ?>
+    <script type="text/javascript">
+        document.observe("dom:loaded", function () {
+            bundle.reloadPrice();
+        });
+    </script>
 <?php endif; ?>
