--- a/app/design/frontend/foundation/default/template/catalog/product/view/tierprices.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/tierprices.phtml
@@ -162,12 +162,11 @@ if (Mage::helper('weee')->typeOfDisplay($_product, array(1, 2, 4))) {
                 <?php echo $this->__('each') ?>
             <?php else: ?>
                 <?php
-                $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null, $_store);
+                $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null);
                 $taxclassid = $_product->getData('tax_class_id');
                 $percent = Mage::getSingleton('tax/calculation')->getRate($request->setProductClassId($taxclassid));
                 $_finalPrice = $_product->getFinalprice();
-                $_priceInclTax = Mage::helper('tax')->getPrice($_product, $_finalPrice, true, null, null, null, $_store, null, false);
-                $_save_price = $_price['formated_price_incl_tax'] - $_priceInclTax;
+                $_priceInclTax = Mage::helper('tax')->getPrice($_product, $_finalPrice);
                 ?>
                 <tr>
                     <td><?php echo $this->__('ab') ?>
@@ -221,10 +220,9 @@ if (Mage::helper('weee')->typeOfDisplay($_product, array(1, 2, 4))) {
                 <?php echo $this->__('each') ?>
             <?php else: ?>
                 <?php
-                $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null, $_store);
+                $store = Mage::app()->getStore();
+                $request = Mage::getSingleton('tax/calculation')->getRateRequest(null, null, null, $store);
                 $taxclassid = $_product->getData('tax_class_id');
-                $percent = Mage::getSingleton('tax/calculation')->getRate($request->setProductClassId($taxclassid));
-                $_save_price = $_product->getFinalPrice() - $_price['price'];
                 ?>
                 <tr>
                     <td><?php echo $this->__('ab') ?>
